--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="rettangle"></div>
       </div>
 
-      <div class="btn-box">
+      <div class="colors-box">
         <ul class="d-none list-colors"></ul>
       </div>
 
