--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Reboot</title>
   <link rel="stylesheet" href="./css/style.css">
-</head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></head>
 <body>
-  <div class="container">
+  <div class="wrapper">
 
-      <div class="figures-box">
+      <div class="shape-box">
         <div class="square"></div>
         <div class="circle"></div>
-        <div class="rettangle"></div>
+        <div class="rectangle"></div>
       </div>
 
-      <div class="colors-box">
-        <ul class="d-none list-colors"></ul>
+      <div class="color-box">
+        <ul class="color-list d-none"></ul>
       </div>
 
-      <div class="btn-lg">
-        <a href="#">Show colors</a>
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-primary btn-lg">Show colors</button>
       </div>
-
 
   </div>
 
